# Vectoroids-vita

./: CHANGES.txt  README.md  README.txt  Readme-Wii.txt
src/: CMakeLists.txt  Makefile
src/data/music/: decision.s3m  decision.txt
src/sce_sys/livearea/contents/: template.xml
src/source/: vectoroids.c
vectoroids/: boot.dol  meta.xml
